[package]
name = "rpeg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csc411_image = "0.5.2"
csc411_arith = "0.1.0"
csc411_rpegio = "0.4.0"
array2 = { path = "../array2" }
word_block = {path = "../rpeg/src/word_block"}
component_rgb = {path = "../rpeg/src/component_rgb"}